--- a/BookLists/Web.config
+++ b/BookLists/Web.config
@@ -5,11 +5,10 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-BookLists-20141001041840.mdf;Initial Catalog=aspnet-BookLists-20141001041840;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="SAXO.DbConnection" connectionString="Data Source=(local)\SQLEXPRESS;Initial Catalog=SAXODB;User ID=sa;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
