Simple view for book lists.
Adding a simple view for book lists and removing redundant sources.

--- a/Persistence/Persistence.csproj
+++ b/Persistence/Persistence.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Context\SAXODbContext.cs" />
     <Compile Include="Entities\BookEntity.cs" />
     <Compile Include="Entities\BookListEntity.cs" />
+    <Compile Include="Exceptions\BookListException.cs" />
     <Compile Include="Initializer\SAXODbInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BookListsDataService.cs" />
